@@ -1,6 +1,7 @@
 0.4.4
 - Added Add-ScrnSaverBackdoor to the Backdoors directory.
-- Download-Execute-PS now randomizes filename foe the saved script.
+- Download-Execute-PS now randomizes filename for the saved script.
+- Added Invoke-ADSBackdoor (by Matt).
 0.4.3
 - Added Out-DnsTxt to Utility directory.
 - Modifications to DNS_TXT_Pwnage and Execute-DNSTXT-Code to support multiple domains.
